--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "tinyapp",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,5 +18,7 @@
   "homepage": "https://github.com/struggleBug09/tinyapp#readme",
   "dependencies": {
     "express": "^4.18.2"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
