--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "chai": "^5.0.3",
+    "mocha": "^10.2.0",
     "nodemon": "^3.0.2"
   },
   "description": ""
