--- a/package.json
+++ b/package.json
@@ -19,15 +19,16 @@
   "homepage": "https://github.com/struggleBug09/tinyapp#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "chai-http": "^4.4.0",
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.1.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "chai": "^5.0.3",
-    "mocha": "^10.2.0",
-    "nodemon": "^3.0.2"
+    "chai": "^4.3.1",
+    "mocha": "^9.2.2",
+    "nodemon": "^3.0.3"
   },
   "description": ""
 }
